--- a/ff/reg/templates/reg/login.html
+++ b/ff/reg/templates/reg/login.html
@@ -7,16 +7,8 @@
     <meta name="description" content="Пример на bootstrap 5: Форма входа - макет и дизайн формы · Версия v5.0.2">
     <title>Форма входа | Signin Template for Bootstrap · v5.0.2</title>
 
-    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
-    <!-- Favicons -->
-    <!-- <link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-    <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico"> -->
     <meta name="theme-color" content="#7952b3">
 
 
@@ -36,8 +28,6 @@
         }
     </style>
 
-
-    <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
 </head>
 
@@ -45,18 +35,25 @@
 <body class="text-center">
     <div class="container justify-content-center mt-5" style="width: fit-content;">
         <main class="form-signin">
-            <form>
-                <!-- <img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57" -->
+            <form method="POST" action="">
+                {% csrf_token %}
                 <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-    
+                
+                <div class="form-floating mb-3">
+                    <input type="login" name="login" class="form-control" id="floatingInput" placeholder="Login">
+                    <label for="floatingPassword">Login</label>
+                </div>
+
                 <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <input type="email" name="mail" class="form-control" id="floatingInput" placeholder="name@example.com">
                     <label for="floatingInput">Email address</label>
                 </div>
                 <div class="form-floating mt-3">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
                     <label for="floatingPassword">Password</label>
                 </div>
+
+
     
                 <div class="checkbox mt-2 mb-3">
                     <label>
