--- a/ff/main/templates/main/edit.html
+++ b/ff/main/templates/main/edit.html
@@ -30,11 +30,7 @@
 
     <link href="signin.css" rel="stylesheet">
 </head>
-<script>
-    function singIn(){
-        return location.href = "/singin";
-    }
-</script>
+
 
 <body class="text-center">
     <div class="container justify-content-center mt-5" style="width: fit-content;">
@@ -44,34 +40,28 @@
                 <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
                 <div class="form-floating mb-3">
-                    <input type="login" name="login" class="form-control" id="floatingInput" placeholder="Login">
-                    <label for="floatingPassword">Login</label>
+                    <input type="login" name="login" class="form-control" id="floatingInput" placeholder="Login" value="{{ user.login }}">
                 </div>
 
-                <div class="form-floating mt-3">
-                    <input type="password" name="password" class="form-control" id="floatingPassword"
-                        placeholder="Password">
-                    <label for="floatingPassword">Password</label>
+                <div class="form-floating mb-3">
+                    <input type="description" name="description" class="form-control" id="floatingInput" placeholder="Login" value="{{ user.description }}">
                 </div>
-
-
 
                 <div class="checkbox mt-2 mb-3">
                     <label>
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Login in</button>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
             </form>
-            <button class="w-100 btn btn-lg btn-info" onclick="singIn()">Sign in</button>
-            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
         </main>
     </div>
-    
-    
+
+
     <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 
 </body>
