--- a/ff/reg/templates/reg/singin.html
+++ b/ff/reg/templates/reg/singin.html
@@ -30,11 +30,7 @@
 
     <link href="signin.css" rel="stylesheet">
 </head>
-<script>
-    function singIn(){
-        return location.href = "/singin";
-    }
-</script>
+
 
 <body class="text-center">
     <div class="container justify-content-center mt-5" style="width: fit-content;">
@@ -42,36 +38,38 @@
             <form method="POST" action="">
                 {% csrf_token %}
                 <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
+                
                 <div class="form-floating mb-3">
                     <input type="login" name="login" class="form-control" id="floatingInput" placeholder="Login">
                     <label for="floatingPassword">Login</label>
                 </div>
 
+                <div class="form-floating">
+                    <input type="email" name="mail" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
                 <div class="form-floating mt-3">
-                    <input type="password" name="password" class="form-control" id="floatingPassword"
-                        placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
                     <label for="floatingPassword">Password</label>
                 </div>
 
 
-
+    
                 <div class="checkbox mt-2 mb-3">
                     <label>
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Login in</button>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
             </form>
-            <button class="w-100 btn btn-lg btn-info" onclick="singIn()">Sign in</button>
-            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
         </main>
     </div>
-    
-    
+
+
     <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 
 </body>
