--- a/ff/main/templates/main/edit.html
+++ b/ff/main/templates/main/edit.html
@@ -37,7 +37,7 @@
         <main class="form-signin">
             <form method="POST" action="">
                 {% csrf_token %}
-                <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+                <h1 class="h3 mb-3 fw-normal">Please edit</h1>
 
                 <div class="form-floating mb-3">
                     <input type="login" name="login" class="form-control" id="floatingInput" placeholder="Login" value="{{ user.login }}">
@@ -52,7 +52,7 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Edit</button>
                 <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
             </form>
         </main>
