--- a/ff/reg/templates/reg/login.html
+++ b/ff/reg/templates/reg/login.html
@@ -63,7 +63,8 @@
                 </div>
                 <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Login in</button>
             </form>
-            <button class="w-100 btn btn-lg btn-info" onclick="singIn()">Sign in</button>
+            <!-- <button class="w-100 btn btn-lg btn-info" onclick="singIn()">Sign in</button> -->
+            <p style="display:inline-block;">Don't have account?</p> <a href="/singin">Sing in</a>
             <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
         </main>
     </div>
