--- a/ff/reg/templates/reg/singin.html
+++ b/ff/reg/templates/reg/singin.html
@@ -60,9 +60,10 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-                <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+                <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Sign in</button>
             </form>
+            <p style="display:inline-block;">Allready have account?</p> <a href="/login">Log in</a>
+            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
         </main>
     </div>
 
