--- a/ff/main/templates/main/edit.html
+++ b/ff/main/templates/main/edit.html
@@ -1,38 +1,7 @@
-<!doctype html>
-<html lang="ru">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Пример на bootstrap 5: Форма входа - макет и дизайн формы · Версия v5.0.2">
-    <title>Форма входа | Signin Template for Bootstrap · v5.0.2</title>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-
-    <meta name="theme-color" content="#7952b3">
+{% extends 'main/layout.html' %}
 
 
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-    <link href="signin.css" rel="stylesheet">
-</head>
-
-
-<body class="text-center">
+{% block content %}
     <div class="container justify-content-center mt-5" style="width: fit-content;">
         <main class="form-signin">
             <form method="POST" action="">
@@ -64,6 +33,4 @@
         crossorigin="anonymous"></script>
 
 
-</body>
-
-</html>
+{% endblock %}
