--- a/ff/main/templates/main/index.html
+++ b/ff/main/templates/main/index.html
@@ -1,35 +1,39 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Noto+Sans:wght@500&family=Plus+Jakarta+Sans:wght@300&family=Ubuntu:wght@300;400&display=swap"
-        rel="stylesheet">
-
-</head>
-<script>
-    function edit() {
-        return location.href = "/edit";
-    }
-    function logout(){
-        return location.href = "/logout";
-    }
-</script>
-
-<body>
+{% extends 'main/layout.html' %}
+{% block content %}
+    <script>
+        function edit() {
+            return location.href = "/edit";
+        }
+        function logout() {
+            return location.href = "/logout";
+        }
+    </script>
     <div class="row">
+        <div class="col-lg-2 col-0"></div>
+        <div class="col-lg-8 col-12">
+            <div class="row ">
+                <div class="col-4 mt-4">
+                    <div style="width: 150px; height: 150px; border-radius:80px; background-color: aquamarine;"></div>
+                </div>
+                <div class="col-8 mt-5"> 
+                    <h3 style="display: inline-block;">{{ user.login }}</h3> 
+                    {% if salf_page %}
+                    <button style="border-style: solid;
+                                   border-color: #eeecec; 
+                                   background-color: #ffffff; 
+                                   border-radius:5px;
+                                   margin-left: 20px;
+                                   width: 80px; 
+                                   text-align: center" onclick="edit()"> Edit</button>
+                    {% endif %}
+                    <p style="margin-top: 10px;">{{ user.description }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2 col-0"></div>
+    </div>
+
+    <!-- <div class="row">
         <div class="col-3"></div>
         <div class="col-6">
             <div style="background-color: rgb(209, 209, 209); border-radius: 20px; text-align: center; height: 500px; margin-top: 30px;">
@@ -55,7 +59,5 @@
 
         </div>
         <div class="col-3"></div>
-    </div>
-</body>
-
-</html>
+    </div> -->
+{% endblock %}
