--- a/ff/main/templates/main/edit.html
+++ b/ff/main/templates/main/edit.html
@@ -21,6 +21,10 @@
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
+                {{ form.as_p }}
+                <!-- <p><input type="file" name="photo" multiple accept="image/jpeg,image/png">
+                    <input type="submit" value="Отправить">
+                </p> -->
                 <button class="w-100 btn btn-lg btn-primary" type="submit">Edit</button>
                 <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
             </form>
