--- a/ff/main/templates/main/index.html
+++ b/ff/main/templates/main/index.html
@@ -25,6 +25,13 @@
                                    margin-left: 20px;
                                    width: 80px; 
                                    text-align: center" onclick="edit()"> Edit</button>
+                    <button style="border-style: solid;
+                                    border-color: #eeecec; 
+                                    background-color: #ffffff; 
+                                    border-radius:5px;
+                                    margin-left: 20px;
+                                    width: 80px; 
+                                    text-align: center" onclick="logout()"> Log out</button>
                     {% endif %}
                     <p style="margin-top: 10px;">{{ user.description }}</p>
                 </div>
